@@ -1064,6 +1064,13 @@ EXTERN int		TclByteArrayMatch (const unsigned char * string,
 				int strLen, const unsigned char * pattern, 
 				int ptnLen);
 #endif
+#ifndef TclReToGlob_TCL_DECLARED
+#define TclReToGlob_TCL_DECLARED
+/* 238 */
+EXTERN int		TclReToGlob (Tcl_Interp * interp, const char * reStr, 
+				int reStrLen, Tcl_DString * dsPtr, 
+				int * exactPtr);
+#endif
 
 typedef struct TclIntStubs {
     int magic;
@@ -1322,6 +1329,7 @@ typedef struct TclIntStubs {
     void (*tclInitVarHashTable) (TclVarHashTable * tablePtr, Namespace * nsPtr); /* 235 */
     void (*tclBackgroundException) (Tcl_Interp * interp, int code); /* 236 */
     int (*tclByteArrayMatch) (const unsigned char * string, int strLen, const unsigned char * pattern, int ptnLen); /* 237 */
+    int (*tclReToGlob) (Tcl_Interp * interp, const char * reStr, int reStrLen, Tcl_DString * dsPtr, int * exactPtr); /* 238 */
 } TclIntStubs;
 
 #ifdef __cplusplus
@@ -2058,6 +2066,10 @@ extern TclIntStubs *tclIntStubsPtr;
 #ifndef TclByteArrayMatch
 #define TclByteArrayMatch \
 	(tclIntStubsPtr->tclByteArrayMatch) /* 237 */
+#endif
+#ifndef TclReToGlob
+#define TclReToGlob \
+	(tclIntStubsPtr->tclReToGlob) /* 238 */
 #endif
 
 #endif /* defined(USE_TCL_STUBS) && !defined(USE_TCL_STUB_PROCS) */
